--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - add `check_command` and related `check_command_default` attr for
+   `create_services`
 
 0.002002  2014-01-24 22:54:52-06:00 America/Chicago
  - upgrade nssm to 2.21.1
