--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - add optional start type config
 
 0.002004  2018-02-13 16:25:46-06:00 America/Chicago
  - add optional user and password configs
